--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOv9fUoQVIQ/USoQFF3Zv3d",
+      "authorship_tag": "ABX9TyPWOPQqiQN/NGDNy5KASmck",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3253,7 +3253,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3285,7 +3285,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3327,7 +3327,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3355,7 +3355,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3387,7 +3387,7 @@
           "height": 36
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3429,7 +3429,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3459,7 +3459,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3491,7 +3491,7 @@
           "height": 36
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3507,6 +3507,91 @@
           "execution_count": 28
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# Sample sales data\n",
+        "data = {\n",
+        "    'Date': ['2024-01-01', '2024-01-02', '2024-01-03', '2024-01-04', '2024-01-05'],\n",
+        "    'Product': ['A', 'B', 'A', 'C', 'B'],\n",
+        "    'Revenue': [100, 150, 120, 80, 200]\n",
+        "}\n",
+        "\n",
+        "# Convert 'Date' column to datetime\n",
+        "data['Date'] = pd.to_datetime(data['Date'])\n",
+        "\n",
+        "# Create DataFrame\n",
+        "sales_data = pd.DataFrame(data)\n",
+        "\n",
+        "print(sales_data)\n"
+      ],
+      "metadata": {
+        "id": "jwldt0vspzDi",
+        "outputId": "1d7751c0-e137-47a6-cfd0-b27f5c68cd67",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "        Date Product  Revenue\n",
+            "0 2024-01-01       A      100\n",
+            "1 2024-01-02       B      150\n",
+            "2 2024-01-03       A      120\n",
+            "3 2024-01-04       C       80\n",
+            "4 2024-01-05       B      200\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# total revenue generated for each product in the month of January 2024.\n",
+        "jan_2014= sales_data[(sales_data['Date'].dt.year==2024) & (sales_data['Date'].dt.month==1)]\n",
+        "revenue_by_product=jan_2014.groupby('Product')['Revenue'].sum()\n",
+        "revenue_by_product"
+      ],
+      "metadata": {
+        "id": "TMl3nIpqqhQR",
+        "outputId": "7f775c66-4d76-4bd5-a8d4-b67bbbd69901",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Product\n",
+              "A    220\n",
+              "B    350\n",
+              "C     80\n",
+              "Name: Revenue, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "nKxMuC3Urve-"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
