--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPe3Bp/JB60NzIHw5KR/H2S",
+      "authorship_tag": "ABX9TyNW65JkepJvam05QXqCaf7D",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3228,6 +3228,67 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "numbers = [2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+        "from sympy import isprime\n",
+        "def prime_num(numbers):\n",
+        "  pr=[]\n",
+        "  for num in numbers:\n",
+        "    if isprime(num)==True:\n",
+        "      pr.append(num)\n",
+        "  return pr\n",
+        "print(prime_num(numbers))"
+      ],
+      "metadata": {
+        "id": "NL_V2XTE9FKb",
+        "outputId": "86ae18a9-ab32-4aaf-f65b-d0073e78f6ff",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 3, 5, 7]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sentence = \"Hello world, how are you?\"\n",
+        "# o/p=you? are how world, Hello\n",
+        "def new(string):\n",
+        "  string=string.split():\n",
+        "    new.append(word[::-1])\n",
+        "  return new\n",
+        "print(new(sentence))\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "gYjPhx6u_TVu",
+        "outputId": "09b890a6-8a31-4989-b90b-5fcbcbc04130",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['olleH', ',dlrow', 'woh', 'era', '?uoy']\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# **Pandas**"
@@ -4284,7 +4345,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4319,7 +4380,7 @@
           "height": 300
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4665,7 +4726,7 @@
           "height": 143
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4964,7 +5025,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4994,7 +5055,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5023,7 +5084,7 @@
       "metadata": {
         "id": "CkaE2jUBKoOA"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5041,7 +5102,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
