--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNW65JkepJvam05QXqCaf7D",
+      "authorship_tag": "ABX9TyOP/Rtbec382lhNXv487XMy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3247,7 +3247,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3277,13 +3277,114 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "['olleH', ',dlrow', 'woh', 'era', '?uoy']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from collections import Counter\n",
+        "counts = Counter('abracadabra')\n",
+        "print(counts)\n",
+        "print(counts['a'])\n",
+        "print(counts['b'])"
+      ],
+      "metadata": {
+        "id": "mRk_M9DjLx7v",
+        "outputId": "a80a3713-69fb-4a4a-82f8-69ad65284725",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Counter({'a': 5, 'b': 2, 'r': 2, 'c': 1, 'd': 1})\n",
+            "5\n",
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "stones='aA'\n",
+        "jewels = \"aAAbbbb\"\n",
+        "def num_jwels(stones,jewels):\n",
+        "  cs=Counter(jewels)\n",
+        "  n=0\n",
+        "  for i in stones:\n",
+        "    if i in jewels:\n",
+        "      n+=cs[i]\n",
+        "  return n\n",
+        "num_jwels(stones,jewels)"
+      ],
+      "metadata": {
+        "id": "4_zxK-KzNsyE",
+        "outputId": "ad6680d0-ece1-408b-9143-789641026c19",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "words = [\"leet\",\"code\"]\n",
+        "x = \"e\"\n",
+        "new=[]\n",
+        "for i in range(len(words)):\n",
+        "  if i in x:\n",
+        "    new.append(i)\n",
+        "\n",
+        "\n",
+        "\n",
+        "print(new)\n"
+      ],
+      "metadata": {
+        "id": "P5tpTTf5VqM7",
+        "outputId": "07e7d541-582a-436d-c738-6e0115d7c296",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "'in <string>' requires string as left operand, not int",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-18-bc1d1a2f9d50>\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mnew\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwords\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m   \u001b[0;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mnew\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: 'in <string>' requires string as left operand, not int"
           ]
         }
       ]
