--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOP/Rtbec382lhNXv487XMy",
+      "authorship_tag": "ABX9TyPCmgcGXNQU/1O8m+RcBRf9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3304,7 +3304,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3338,7 +3338,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3353,39 +3353,74 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Find Words Containing Character\n",
+        "\n",
+        "Input: words = [\"leet\",\"code\"], x = \"e\"\n",
+        "Output: [0,1]"
+      ],
+      "metadata": {
+        "id": "aOBM7DBnvWh_"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "words = [\"leet\",\"code\"]\n",
         "x = \"e\"\n",
-        "new=[]\n",
-        "for i in range(len(words)):\n",
-        "  if i in x:\n",
-        "    new.append(i)\n",
+        "def index_number():\n",
+        "  new =[]\n",
+        "  for i,j in enumerate(words):\n",
+        "    if x in j:\n",
+        "      new.append(i)\n",
         "\n",
         "\n",
-        "\n",
-        "print(new)\n"
+        "  return new\n",
+        "print(index_number())"
       ],
       "metadata": {
         "id": "P5tpTTf5VqM7",
-        "outputId": "07e7d541-582a-436d-c738-6e0115d7c296",
+        "outputId": "560cc3bd-29b0-47c0-e7c3-ddea90b30379",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 211
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": 38,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "'in <string>' requires string as left operand, not int",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-18-bc1d1a2f9d50>\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mnew\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwords\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m   \u001b[0;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mnew\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: 'in <string>' requires string as left operand, not int"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0, 1]\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "word = \"abcdefd\"\n",
+        "word.count('d')"
+      ],
+      "metadata": {
+        "id": "aouS8VHptgW0",
+        "outputId": "19ac8b1a-239e-4022-e1dc-0a3a5dc22ae0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
         }
       ]
     },
