--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPCmgcGXNQU/1O8m+RcBRf9",
+      "authorship_tag": "ABX9TyO4olwIxQWIHq+jbg7/AWlM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3386,7 +3386,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3401,26 +3401,56 @@
       "cell_type": "code",
       "source": [
         "word = \"abcdefd\"\n",
-        "word.count('d')"
+        "ch='d'\n",
+        "i=word.index(ch)+1\n",
+        "final = word[:i][::-1]\n",
+        "# print(final)\n",
+        "new = word[i:]\n",
+        "# print(new)\n",
+        "print(final + new)"
       ],
       "metadata": {
         "id": "aouS8VHptgW0",
-        "outputId": "19ac8b1a-239e-4022-e1dc-0a3a5dc22ae0",
+        "outputId": "316a12c3-0fe9-45c4-ee82-e5e3247a1069",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 41,
+      "execution_count": 9,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "2"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 41
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "dcbaefd\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "word1 = [\"ab\", \"c\"]\n",
+        " word2 = [\"a\", \"bc\"]\n",
+        "print(word1)"
+      ],
+      "metadata": {
+        "id": "0bV1D-D3dnS4",
+        "outputId": "4cd49643-8bec-4e2d-b021-ae85a94f7db9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax. Maybe you meant '==' or ':=' instead of '='? (<ipython-input-10-7b6454392a7a>, line 1)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-7b6454392a7a>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    word1 = [\"ab\", \"c\"], word2 = [\"a\", \"bc\"]\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Maybe you meant '==' or ':=' instead of '='?\n"
+          ]
         }
       ]
     },
