--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO4olwIxQWIHq+jbg7/AWlM",
+      "authorship_tag": "ABX9TyMbD0zTX3W/vV6MCpJGTNow",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3416,7 +3416,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3428,28 +3428,76 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "word1 represents string \"ab\" + \"c\" -> \"abc\"\n",
+        "\n",
+        "word2 represents string \"a\" + \"bc\" -> \"abc\""
+      ],
+      "metadata": {
+        "id": "j5K5VoaOZnnB"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "# word1 = [\"a\", \"cb\"], word2 = [\"ab\", \"c\"]\n",
         "word1 = [\"ab\", \"c\"]\n",
-        " word2 = [\"a\", \"bc\"]\n",
-        "print(word1)"
+        "word2 = [\"a\", \"bc\"]\n",
+        "def solution_(word1,word2):\n",
+        "  string1=''.join(word1)\n",
+        "  string2=''.join(word1)\n",
+        "  if string1==string2:\n",
+        "    return True\n",
+        "  else:\n",
+        "    return False\n",
+        "\n",
+        "solution_(word1,word2)"
       ],
       "metadata": {
         "id": "0bV1D-D3dnS4",
-        "outputId": "4cd49643-8bec-4e2d-b021-ae85a94f7db9",
+        "outputId": "269463a4-4ea8-48e3-857f-fcbbf1ef6e5d",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 106
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax. Maybe you meant '==' or ':=' instead of '='? (<ipython-input-10-7b6454392a7a>, line 1)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-7b6454392a7a>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    word1 = [\"ab\", \"c\"], word2 = [\"a\", \"bc\"]\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Maybe you meant '==' or ':=' instead of '='?\n"
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "accounts = [[1,2,3],[3,2,1]]\n",
+        "number = 0\n",
+        "for num in accounts[0]:\n",
+        "  number+=num\n",
+        "print(number)"
+      ],
+      "metadata": {
+        "id": "CH4j5j9Pg8RO",
+        "outputId": "4335b1ed-fdd9-49b0-d585-fa7f68ad5d65",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6\n"
           ]
         }
       ]
