--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMbD0zTX3W/vV6MCpJGTNow",
+      "authorship_tag": "ABX9TyPH7lwPEzGPWZInXSVfIng7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3461,7 +3461,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3491,7 +3491,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3499,6 +3499,85 @@
           "text": [
             "6\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " first palindromic string in the array"
+      ],
+      "metadata": {
+        "id": "ZXYsp-Okf8TJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "words = [\"abc\",\"car\",\"ada\",\"racecar\",\"cool\"]\n",
+        "def pallindrome(words):\n",
+        "  wor =\"\"\n",
+        "  for word in words:\n",
+        "    if word==word[::-1]:\n",
+        "      if not wor:\n",
+        "        wor+=word\n",
+        "\n",
+        "  return wor\n",
+        "\n",
+        "print(pallindrome(words))"
+      ],
+      "metadata": {
+        "id": "AmvIa0w_U5VM",
+        "outputId": "974b043f-c2e3-4999-ce23-03288d5625f4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ada\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s = \"string\"\n",
+        "def new(s):\n",
+        "  i=s.index('i')\n",
+        "  re=s[:i][::-1]\n",
+        "  en=s[i+1:]\n",
+        "  return re+en\n",
+        "\n",
+        "new(s)"
+      ],
+      "metadata": {
+        "id": "nzpX2sDFf94L",
+        "outputId": "81efdc43-3c27-45ff-d8ea-00c29da043f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'rtsng'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 18
         }
       ]
     },
