--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOmsUwu7y5ICqDAMa6ELffp",
+      "authorship_tag": "ABX9TyP1BuUWKOfGjrPD08MJn5aX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3582,6 +3582,58 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "word = input(\"Enter a word: \")\n",
+        "new = ''.join(sorted(set(word), key=word.index))\n",
+        "print(new)"
+      ],
+      "metadata": {
+        "id": "lz2Z7CgWdE0x",
+        "outputId": "d02ab65e-8bc1-45bc-95f7-59c109427397",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a word: ankitchauhan\n",
+            "ankitchu\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "word= 'ankitchauhan'\n",
+        "lst = list(sorted(set(word)))\n",
+        "final = ''.join(lst)\n",
+        "print(final)"
+      ],
+      "metadata": {
+        "id": "HtZ66eAYgROG",
+        "outputId": "e4399216-aa4d-4155-e135-e68cf6a16657",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "achikntu\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# **Pandas**"
@@ -6948,7 +7000,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7002,7 +7054,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7039,7 +7091,7 @@
           "height": 1000
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7776,7 +7828,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7799,7 +7851,7 @@
       "metadata": {
         "id": "xJ-XiZ6NCWIx"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7828,7 +7880,7 @@
           "height": 1000
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8540,7 +8592,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8571,7 +8623,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8625,7 +8677,7 @@
       "metadata": {
         "id": "KFwLzWoDH7l9"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     }
   ]
