--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP1BuUWKOfGjrPD08MJn5aX",
+      "authorship_tag": "ABX9TyOn5K+2zET8S0PQyY4Oa3yU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3595,7 +3595,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3622,13 +3622,65 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "achikntu\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lst = [1,3,5,7,9,2,4,6,8]\n",
+        "print(lst)\n",
+        "print(*lst)\n"
+      ],
+      "metadata": {
+        "id": "6XXmtNi3j6qs",
+        "outputId": "9f6cb8d2-de2e-43db-88c9-d8d45e7d90f2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 3, 5, 7, 9, 2, 4, 6, 8]\n",
+            "1 3 5 7 9 2 4 6 8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = [x**3 for x in range(11) if x%2==0]  #list comp\n",
+        "print(num)\n",
+        "print(*num)  # This is because *args unpacks the list into individual arguments"
+      ],
+      "metadata": {
+        "id": "WS5UNQahoeY3",
+        "outputId": "2728f120-1b64-49d0-fcff-2f89f1bd0390",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0, 8, 64, 216, 512, 1000]\n",
+            "0 8 64 216 512 1000\n"
           ]
         }
       ]
