--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOn5K+2zET8S0PQyY4Oa3yU",
+      "authorship_tag": "ABX9TyPU1TQcwNwRExlqE7yj89Oa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3647,7 +3647,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3673,7 +3673,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3681,6 +3681,54 @@
           "text": [
             "[0, 8, 64, 216, 512, 1000]\n",
             "0 8 64 216 512 1000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def generate_pascal_triangle(rows):\n",
+        "    triangle = []\n",
+        "    for i in range(rows):\n",
+        "        row = []\n",
+        "        for j in range(i + 1):\n",
+        "            if j == 0 or j == i:\n",
+        "                row.append(1)\n",
+        "            else:\n",
+        "                row.append(triangle[i - 1][j - 1] + triangle[i - 1][j])\n",
+        "        triangle.append(row)\n",
+        "    return triangle\n",
+        "\n",
+        "def print_pascal_triangle(triangle):\n",
+        "    for row in triangle:\n",
+        "        print(\" \".join(map(str, row)).center(len(triangle[-1]) * 4))\n",
+        "\n",
+        "rows = int(input(\"Enter the number of rows for Pascal's triangle: \"))\n",
+        "pascal_triangle = generate_pascal_triangle(rows)\n",
+        "print(\"\\nPascal's Triangle:\")\n",
+        "print_pascal_triangle(pascal_triangle)\n"
+      ],
+      "metadata": {
+        "id": "7myQzSpJkA50",
+        "outputId": "067e0ccd-2b5c-4bd1-83fc-d5753ce4330c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number of rows for Pascal's triangle: 4\n",
+            "\n",
+            "Pascal's Triangle:\n",
+            "       1        \n",
+            "      1 1       \n",
+            "     1 2 1      \n",
+            "    1 3 3 1     \n"
           ]
         }
       ]
@@ -8728,6 +8776,191 @@
       ],
       "metadata": {
         "id": "KFwLzWoDH7l9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "ini_array = np.array([10, 20, 5, 10, 8, 20, 8, 9])\n",
+        "print(ini_array)\n",
+        "# print unique values array\n",
+        "unique_elements, counts_elements = np.unique(ini_array, return_counts=True)\n",
+        "print(unique_elements)\n",
+        "print(counts_elements)"
+      ],
+      "metadata": {
+        "id": "NQqKWOQ3n6Nl",
+        "outputId": "7da6a19a-9ad1-4c76-81f5-681218e344cd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10 20  5 10  8 20  8  9]\n",
+            "[ 5  8  9 10 20]\n",
+            "[1 2 1 2 2]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lst =[1,4,7,2,9,1,5,2,9,1,7,8,9]\n",
+        "unique , counts = np.unique(lst,return_counts=True)\n",
+        "print(unique)\n",
+        "print(counts)"
+      ],
+      "metadata": {
+        "id": "dD6hC1PBp10t",
+        "outputId": "d6a10f04-3fc2-471b-82c3-97ef944f1c8e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1 2 4 5 7 8 9]\n",
+            "[3 2 1 1 2 1 3]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr = np.array(['i', 'love', 'NumPy', 'AND', 'almabetter'], dtype=str)\n",
+        "print(arr)\n",
+        "new=np.char.multiply(arr,5)\n",
+        "print(new)"
+      ],
+      "metadata": {
+        "id": "X1LKT_VjvzRX",
+        "outputId": "47a41b3b-d654-4ff3-923c-9af803b7d45f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['i' 'love' 'NumPy' 'AND' 'almabetter']\n",
+            "['iiiii' 'lovelovelovelovelove' 'NumPyNumPyNumPyNumPyNumPy'\n",
+            " 'ANDANDANDANDAND' 'almabetteralmabetteralmabetteralmabetteralmabetter']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr = np.array(['i', 'love', 'NumPy', 'AND', 'almabetter'], dtype=str)\n",
+        "def new_w(arr):\n",
+        "  new=[]\n",
+        "  for word in arr:\n",
+        "    new.append( word * 5)\n",
+        "  return new\n",
+        "print(new_w(arr))"
+      ],
+      "metadata": {
+        "id": "aDsrjOP6ygc3",
+        "outputId": "615b7030-bf29-4cb2-c81d-41e1b34502eb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['iiiii', 'lovelovelovelovelove', 'NumPyNumPyNumPyNumPyNumPy', 'ANDANDANDANDAND', 'almabetteralmabetteralmabetteralmabetteralmabetter']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create Sample NumPy Array\n",
+        "arr = np.array(['i', 'love', 'NumPy', 'AND', 'almabetter'], dtype=str)\n",
+        "\n",
+        "print(\"Original Array:\")\n",
+        "print(arr)\n",
+        "r = np.char.join(\" \", arr)\n",
+        "print(r)"
+      ],
+      "metadata": {
+        "id": "lk1g8TAN4mDi",
+        "outputId": "cbad8e57-10d8-4d2c-e9b6-41e9c8a39cbb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Original Array:\n",
+            "['i' 'love' 'NumPy' 'AND' 'almabetter']\n",
+            "['i' 'l o v e' 'N u m P y' 'A N D' 'a l m a b e t t e r']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr = np.array(['i', 'love', 'NumPy', 'AND', 'almabetter'], dtype=str)\n",
+        "def new_w_(arr):\n",
+        "  new_=[]\n",
+        "  for word in arr:\n",
+        "    final = ' '.join(word)\n",
+        "    new_.append( final)\n",
+        "  return new_\n",
+        "print(new_w_(arr))"
+      ],
+      "metadata": {
+        "id": "9-912qXy2rc0",
+        "outputId": "82e73554-e252-4a3b-94d0-c744e2eed032",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['i', 'l o v e', 'N u m P y', 'A N D', 'a l m a b e t t e r']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "-xRIjrQm2uRo"
       },
       "execution_count": null,
       "outputs": []
